--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Hello Page</title>
+<!--    <title>Hello Page</title>-->
+    <th:block th:replace="common-head :: common-head"></th:block>
+
 </head>
 <body>
 <h1 th:text="${message}"></h1>
 <form th:action="@{/mypage}" method="get">
-    <button type="submit">Click Me</button>
+    <button  type="submit" class="button">Click Me</button>
 </form>
 <h1>STATIC</h1>
 <a th:href="@{/mypage}">Go to Page 2</a>
 </body>
+<script>
+
+
+
+
+</script>
 </html>
