--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -8,7 +8,7 @@
 <form th:object="${user}" th:action="@{/processForm}" method="post">
     <input type="text" th:field="*{username}" placeholder="Username" />
     <input type="text" th:field="*{email}" placeholder="Email" />
-    <button type="submit">Submit</button>
+    <button class="button" type="submit">Submit</button>
 </form>
 </body>
 </html>
